@@ -1867,8 +1867,6 @@ mono/dis/Makefile
 mono/cil/Makefile
 mono/arch/Makefile
 mono/os/Makefile
-mono/os/win32/Makefile
-mono/os/unix/Makefile
 mono/arch/x86/Makefile
 mono/arch/amd64/Makefile
 mono/arch/hppa/Makefile
