@@ -93,6 +93,7 @@ typedef struct {
 void          mono_register_bundled_assemblies (const MonoBundledAssembly **assemblies);
 void          mono_register_config_for_assembly (const char* assembly_name, const char* config_xml);
 
+void          mono_set_rootdir (void);
 void          mono_set_dirs (const char *assembly_dir, const char *config_dir);
 G_END_DECLS
 #endif
