@@ -54,8 +54,6 @@ export HOST_CC
 PLATFORM_CFLAGS = -O
 endif
 
-PLATFORM_LIB = ../os/libmonoos.la
-
 # hack for automake to have the same source file in a library and a bin
 genmdesc_CFLAGS = $(AM_CFLAGS)
 
@@ -95,7 +93,6 @@ endif
 
 mono_LDADD = \
 	$(MONO_LIB)			\
-	$(PLATFORM_LIB)		\
 	$(GLIB_LIBS)		\
 	$(GMODULE_LIBS) -lm	\
 	$(ICU_LIBS)
@@ -111,7 +108,6 @@ genmdesc_SOURCES = \
 # Don't link this against libmonoruntime to speed up rebuilds
 genmdesc_LDADD = \
 	$(monodir)/mono/utils/libmonoutils.la $(monodir)/mono/metadata/opcodes.lo -lm	\
-	$(PLATFORM_LIB)		\
 	$(GLIB_LIBS)		\
 	$(GMODULE_LIBS)
 
@@ -311,7 +307,7 @@ nodist_libmono_la_SOURCES = inssel.c inssel.h
 libmono_static_la_SOURCES = $(libmono_la_SOURCES)
 nodist_libmono_static_la_SOURCES = $(nodist_libmono_la_SOURCES)
 libmono_static_la_LDFLAGS = -static
-libmono_static_la_LIBADD = $(static_libs) $(PLATFORM_LIB)
+libmono_static_la_LIBADD = $(static_libs)
 
 BURGSRC= $(common_BURGSRC) $(arch_BURGSRC)
 
@@ -320,8 +316,7 @@ libmonoincludedir = $(includedir)/mono/jit
 libmonoinclude_HEADERS = jit.h
 
 libmono_la_LIBADD = \
-	$(libs) \
-	$(PLATFORM_LIB)
+	$(libs)
 
 %.exe: %.2.cs TestDriver.dll
 	$(GMCS) -out:$@ $< -r:TestDriver.dll 
