@@ -1,8 +1,0 @@
-INCLUDES = 				\
-	-I$(top_srcdir)			\
-	$(GMODULE_CFLAGS)		\
-	$(GLIB_CFLAGS)
-
-noinst_LTLIBRARIES = libmonoos.la
-
-libmonoos_la_SOURCES = util.c
